...
        NSString* password = initialValue ?: @"";

        _secureField = [[NSSecureTextField alloc] initWithFrame:NSZeroRect];
        _secureField.translatesAutoresizingMaskIntoConstraints = NO;
        _secureField.placeholderString = SZLocalizedString(@"password.password");
        _secureField.stringValue = password;
        _secureField.accessibilityIdentifier = @"passwordPrompt.password";

        _plainField = [[NSTextField alloc] initWithFrame:NSZeroRect];
        _plainField.translatesAutoresizingMaskIntoConstraints = NO;
        _plainField.placeholderString = SZLocalizedString(@"password.password");
        _plainField.stringValue = password;
        _plainField.hidden = YES;
        _plainField.accessibilityIdentifier = @"passwordPrompt.passwordPlain";

        _showPasswordButton = [NSButton checkboxWithTitle:SZLocalizedString(@"password.showPassword") target:self action:@selector(togglePasswordVisibility:)];
        _showPasswordButton.translatesAutoresizingMaskIntoConstraints = NO;
        _showPasswordButton.state = [SZSharedNSUserDefaults() boolForKey:SZShowPasswordPreferenceKey] ? NSControlStateValueOn : NSControlStateValueOff;
        _showPasswordButton.accessibilityIdentifier = @"passwordPrompt.showPassword";
    }
...
